--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
             <section class="mb-5 py-4 animate-on-scroll" data-animation="fadeInUp" data-delay="200">
                 <div class="row align-items-center">
                     <div class="col-md-6 mb-4 mb-md-0">
-                        <img src="images/ar.jpg" class="img-fluid rounded shadow-lg" alt="Abstract representation of AR collaboration">
+                        <img src="ar.jpg" class="img-fluid rounded shadow-lg" alt="Abstract representation of AR collaboration">
                     </div>
                     <div class="col-md-6">
                         <h2 class="h3 mb-3 fw-semibold">Our Mission</h2>
